--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>VNW FLIX</title>
   </head>
   <body>
@@ -14,12 +15,29 @@
     <!-- Main -->
     <main>
       <!-- Card -->
-      <div>
+      <div class="card">
         <img
           src="https://upload.wikimedia.org/wikipedia/pt/thumb/0/04/Spider-man-far-from-home-poster.jpg/250px-Spider-man-far-from-home-poster.jpg"
           alt="Homem-Aranha: Longe de Casa"
         />
         <h2>Homem-Aranha: Longe de Casa</h2>
+        <button>Ver agora</button>
+      </div>
+
+      <!-- Card -->
+      <div>
+        <img
+          src="https://m.media-amazon.com/images/M/MV5BMTQ2NTMxODEyNV5BMl5BanBnXkFtZTcwMDgxMjA0MQ@@._V1_.jpg"
+          alt="Velozes & Furiosos: Desafio em Tóquio (2006)"
+        />
+        <h2>Velozes & Furiosos: Desafio em Tóquio (2006)</h2>
+        <button id="bt1">Ver agora</button>
+      </div>
+
+      <!-- Card -->
+      <div class="card">
+        <img src="./img/anime.jpg" alt="Demon Slayer: Castelo Infinito" />
+        <h2>Demon Slayer: Castelo Infinito</h2>
         <button>Ver agora</button>
       </div>
     </main>
